--- a/Client/public/manifest.json
+++ b/Client/public/manifest.json
@@ -4,8 +4,8 @@
     "display": "fullscreen",
     "scope": "/",
     "start_url": "/",
-    "name": "E Fish",
-    "short_name": "E Fish",
+    "name": "WEALTH-TRUST",
+    "short_name": "WEALTH-TRUST",
     "icons": [
         {
             "src": "/icon-192x192.png",
