--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -19,6 +19,7 @@
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
+    "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
